@@ -9,6 +9,10 @@
 
 July 22 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>
 
+  * Bug in taming corrected
+
+July 22 2005 Timo Kiviluoto <holybanana@users.sourceforge.net>
+
   * Charming is now more dependent on attributes etc.
   * Animated bats, spiders & magpie added to char.pcx by Kahvi
   * Mola Mola added to char.pcx by Kahvi
